# real-dedupe-renamer

./: .duplicate_cleaner_settings.json  .duplicate_cleaner_settings.sample.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  RELEASE_CHECKLIST.md  core.py  delete_real_duplicates.py  delete_real_duplicates.spec  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  RELEASE_NOTES_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  implementation_task.yml  maintainer_override.yml  maintenance.yml  ops_incident.yml
.github/workflows/: ci.yml  contribution-guardrails.yml  release-compatibility.yml  release.yml
delete_real_duplicates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CODEBASE_ANALYSIS.md  DECISIONS.md  FEATURES.md  PROJECT_LOG.md  ROADMAP.md
scripts/: check_contribution_guardrails.py  check_release_compatibility.py
src/: App.tsx  api.ts  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autorenamer.rs  commands.rs  deleter.rs  grouper.rs  hasher.rs  lib.rs  main.rs  scanner.rs  settings.rs  types.rs
src-tauri/tests/: e2e_smoke.rs
src/components/: AutoRenameStatus.tsx  AutoRenameTable.tsx  AutoRenamerPanel.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  KeepChoiceDialog.tsx  RenameComponentBuilder.test.tsx  ResultsTable.tsx  (+5 more)
tests/: test_core.py
(+2 files in other folders)
