[project]
name = "delete-real-duplicates"
version = "1.7.15"
requires-python = ">=3.9"
dependencies = ["send2trash>=1.8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line length -- legacy codebase has many long lines
    "SIM108", # ternary operator -- readability preference
    "UP007",  # X | Y union syntax -- keep Optional[] for 3.9 compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
