[package]
name = "delete-real-duplicates"
version = "2.0.0"
edition = "2021"
description = "Find and remove duplicate files"

[lib]
name = "delete_real_duplicates_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
rayon = "1"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
thiserror = "2"
open = "5"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
